style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
}

#main-container {
  height: 100vh;
  display: grid;
  grid-template: 1fr 5fr/ 1fr 4.6fr;
}

#sidebar {
  grid-area: 1 / 1 / 3 / 2;
  background-color: #9333ea;
  color: white;
  padding: 40px;
}

#sidebar > div {
  margin-bottom: 5rem;
}

.dashboard-container {
  margin-top: 1rem;
}

.dashboard-container h1 {
  font-size: 2.5rem;
}

#sidebar a {
  color: white;
  text-decoration: none;
  font-size: 1.5rem;
}

.main-options {
  display: grid;
  grid-template: repeat(5, auto) / auto;
  row-gap: 0.8rem;
}

.secondary-options {
  display: grid;
  grid-template: repeat(3, auto) / auto;
  row-gap: 0.8rem;
}

.main-options div,
.secondary-options div {
  display: flex;
  gap: 0.8rem;
}

svg {
  width: 28px;
}

#header, #main-content {
  font-weight: 500;
}

#header {
  display: grid;
  grid-template: 1fr 1fr / 1fr;
  box-shadow: 0 4px 3px -3px #7f8081;
}

.first-bar {
  display: grid;
  grid-template-columns: 3fr 1fr;
  align-items: center;
}

.search-area {
  display: grid;
  grid-template-columns: auto 1fr;
  column-gap: 1rem;
  padding: 1rem 3rem;
}

.search-area input{
  background-color: #E2E8F0;
  border: 1px solid #E2E8F0;
  border-radius: 1vh;
}

.user-area {
  display: flex;
  align-items: center;
  gap: 2rem;
  justify-self: center;
  padding: 0.5rem 3rem;
}

.user-area .profile-picture img {
  width: 3rem;
  border-radius: 50%;
}

.user-area .user-name {
  font-size: 1.5rem;
}

.second-bar {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-items: center;
  padding: 0 3rem;
  margin-bottom: 0.9rem;
}

.hello-user-area {
  display: grid;
  grid-template: 1fr/ auto auto;
  align-items: center;
  column-gap: 2rem;
}

.main-pfp {
  grid-area: 1 / 1 / 2 / 2;
}

.main-pfp img {
  width: 4rem;
  border-radius: 50%;
}

.hello-user-texts .hi-there {
  font-size: 1.2rem;
}

.hello-user-texts .nickname {
  font-size: 1.5rem;
}

.buttons-area button {
  background-color: #9333ea;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 1vh;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 500;
  margin: 0 1rem;
}

#main-content {
  background-color: #E2E8F0;
  display: grid;
  grid-template: auto 1fr 1fr / 3fr 1fr;
  column-gap: 2rem;
  padding: 1rem 1.5rem 2rem 2rem;
}

.project-cards {
  grid-row: 2 / 4;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
  gap: 1rem;
}

.project {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.project h3 {
  margin-bottom: 0.25rem;
}

.project a {
  align-self: flex-end;
}

.announcement-box {
  grid-row: 1 / 3;
  display: grid;
  grid-template-rows: auto 1fr;
}

.trending-box {
  display: grid;
  grid-template-rows: auto 1fr;
}

#main-content h2 {
  margin: 0.5rem 0;
  font-size: 1.4rem;
  font-weight: 500;
}

#main-content p {
  margin-top: 1px;
  color: #636363;
}

#main-content .announcement-card,
#main-content .trending-card,
#main-content .project {
  background-color: white;
  box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
  border-radius: 1vh;
}

.announcement-card {
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  gap: 0.5rem;
  padding: 1.5rem 2rem;
}

.announcement:not(:last-child) {
  padding-bottom: 0.5em;
  border-bottom: 1px solid #d2d2d2;
}

.trending-card {
  display: grid;
  grid-template-rows: repeat(4, 1fr);
}

.trending {
  display: flex;
  align-items: center;
}

.trending-card img {
  width: 3rem;
  border-radius: 50%;
  margin: 1rem;
}

.trending-username {
  font-weight: 400;
}

